@@ -1,5 +1,5 @@
 ;;  iq2000.md	     Machine Description for Vitesse IQ2000 processors
-;;  Copyright (C) 2003, 2004 Free Software Foundation, Inc.
+;;  Copyright (C) 2003, 2004, 2005 Free Software Foundation, Inc.
 
 ;; This file is part of GCC.
 
@@ -194,6 +194,7 @@
    (nil)
    (nil)])
 
+(include "predicates.md")
 
 
 ;; .........................
